# rvat-scanner

./: Cargo.toml  README.md  alpaca.js  build_cache.js  cache_clean.js  excluded_tickers.json  got.js  rvat  start.sh
src/: alpaca.rs  lib.rs  main.rs
